syntax = "proto3";
package msg;
option go_package = '.;msg';

// EchoWithDelay
message EchoWithDelay {
    int32 DelayInSeconds = 1;
}


message TestRequest {
    bytes Payload = 1;
    bytes Hash = 2;
}

message TestResponse {
    bytes Hash = 2;
}

message TestRequestWithString {
    string Payload = 1;
    string Hash = 2;
}

message TestResponseWithString {
    bytes Hash = 1;
}