syntax = "proto3";
package msg ;
import "core.types.proto";
option go_package = './;msg';


message ServiceSendMessage {
    int64 OnBehalf = 100;
    int64 RandomID = 1;
    InputPeer Peer = 2;
    string Body = 5;
    int64 ReplyTo = 6;
    bool ClearDraft = 7;
    repeated MessageEntity Entities = 8;
}